  the current loaded scaler.
+ MegaZeux now falls back to the default scaling shader when a
  selected scaling shader fails to compile.
+ Blank sprite chars are now drawn when ccheck is 3. (Lancer-X)
+ The sprite color is used with ccheck 3 collisions. (Lancer-X)
+ When spr_yorder is enabled, sprites with the same (sprN_y +
  sprN_cy) value are now consistently ordered by their sprite
  numbers.

DEVELOPERS

+ Added Nintendo 3DS port. (asiekierka)
+ Added "make uninstall" option to the Linux makefile.
+ Added devkitPro portlibs paths to the NDS and Wii Makefiles.
- Removed the depackers and non-MegaZeux formats from libxmp.


September 4, 2017 - MZX 2.90d

Here's another bugfix release. This is mostly assorted small
fixes, but there are also a couple of major fixes here: first,
the ternary operator now works correctly when nested both with
and without expressions, and second, sprN_setview does not break
in conjunction with certain unbound sprites. Additionally, SAMs
will not be converted to WAV files anymore (and are now natively
supported) and the robot debugger config is accessible from the
editor.

FEATURES

+ The current MegaZeux version is now visible from the enter
  menu on the title screen. This is to assist identifying the
  version on platforms that don't respect window title changes
  or have no window border.
+ Updated checkres.bat and checkres documentation.
+ The robot debugger configuration screen is now accessible from
  the editor via Alt+F11.
+ Removed SAM to WAV converter. MegaZeux now has native SAM
  support. (asiekierka)
+ Added crt-wave.frag, updated crt.frag. (astral)

FIXES

+ Fixed a bug where MegaZeux would crash when editing a robot
  with an invalid IF command operator.
+ Fixed a bug where the ternary operator would fail to find the
  correct colon when the middle term contained a second ternary
  operator in a nested expression.
+ Nested ternary operators should now behave as expected.